--- a/app/src/main/res/layout/activity_dashboardcustomer.xml
+++ b/app/src/main/res/layout/activity_dashboardcustomer.xml
@@ -1,22 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/drawer"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".dashboardcustomer">
 
-    <com.google.android.material.navigation.NavigationView
+    <RelativeLayout
+    android:id="@+id/fragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-        android:background="@color/cardview_light_background"
-        app:itemBackground="@color/cardview_light_background"
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+        app:menu="@menu/navmenu"
+        android:id="@+id/botnav"
+        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        app:menu="@menu/dashboardmenu"
-        android:layout_gravity="start"
-        android:layout_height="match_parent">
-    </com.google.android.material.navigation.NavigationView>
+        android:layout_height="wrap_content">
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
+<!--    <LinearLayout-->
+<!--        android:orientation="vertical"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
+<!--        <androidx.appcompat.widget.Toolbar-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content">-->
+<!--            <LinearLayout-->
+<!--                android:weightSum="2"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent">-->
+<!--                <ImageView-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:id="@+id/menu"-->
+<!--                    android:src="@drawable/ic_baseline_menu_24"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content">-->
+
+<!--                </ImageView>-->
+
+<!--                <androidx.appcompat.widget.SearchView-->
+<!--                    app:queryHint="search"-->
+<!--                    android:id="@+id/search"-->
+<!--                    android:layout_weight="3"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content">-->
+<!--                </androidx.appcompat.widget.SearchView>-->
+<!--                <ImageView-->
+<!--                    android:id="@+id/cart"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:src="@drawable/ic_baseline_shopping_cart_24"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content">-->
+
+<!--                </ImageView>-->
+
+<!--            </LinearLayout>-->
+
+<!--        </androidx.appcompat.widget.Toolbar>-->
 
 
-</androidx.drawerlayout.widget.DrawerLayout>
+<!--        <androidx.core.widget.NestedScrollView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent">-->
+<!--            <LinearLayout-->
+<!--                android:orientation="vertical"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent">-->
+
+<!--                <androidx.cardview.widget.CardView-->
+<!--                    android:layout_margin="8dp"-->
+<!--                    app:cardCornerRadius="12dp"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="200dp">-->
+<!--                <com.smarteist.autoimageslider.SliderView-->
+<!--                    android:id="@+id/imageSlider"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="200dp"-->
+<!--                    app:sliderAnimationDuration="600"-->
+<!--                    app:sliderAutoCycleDirection="back_and_forth"-->
+<!--                    app:sliderAutoCycleEnabled="true"-->
+<!--                    app:sliderIndicatorAnimationDuration="600"-->
+<!--                    app:sliderIndicatorGravity="center_horizontal|bottom"-->
+<!--                    app:sliderIndicatorMargin="15dp"-->
+<!--                    app:sliderIndicatorOrientation="horizontal"-->
+<!--                    app:sliderIndicatorPadding="3dp"-->
+<!--                    app:sliderIndicatorRadius="2dp"-->
+<!--                    app:sliderIndicatorSelectedColor="#5A5A5A"-->
+<!--                    app:sliderIndicatorUnselectedColor="#FFF"-->
+<!--                    app:sliderScrollTimeInSec="1"-->
+<!--                    app:sliderStartAutoCycle="true">-->
+<!--                </com.smarteist.autoimageslider.SliderView>-->
+<!--                </androidx.cardview.widget.CardView>-->
+
+<!--                <TextView-->
+<!--                    android:textStyle="italic"-->
+<!--                    android:textColor="#000000"-->
+<!--                    android:layout_margin="6dp"-->
+<!--                    android:textSize="16dp"-->
+<!--                    android:text="Search by Shops"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content">-->
+<!--                </TextView>-->
+
+<!--                <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:scrollbars="horizontal"-->
+<!--            android:id="@+id/rec"-->
+<!--            android:layout_height="wrap_content">-->
+
+<!--        </androidx.recyclerview.widget.RecyclerView>-->
+
+<!--                <TextView-->
+<!--                    android:textStyle="italic"-->
+<!--                    android:textColor="#000000"-->
+<!--                    android:layout_margin="6dp"-->
+<!--                    android:textSize="16dp"-->
+<!--                    android:text="Browse your product"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content">-->
+
+<!--                </TextView>-->
+
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:layout_margin="8dp"-->
+<!--            android:id="@+id/productrec"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content">-->
+
+<!--        </androidx.recyclerview.widget.RecyclerView>-->
+<!--            </LinearLayout>-->
+<!--        </androidx.core.widget.NestedScrollView>-->
+<!--    </LinearLayout>-->
+</RelativeLayout>
+
+</LinearLayout>
