--- a/app/src/main/res/layout/activity_loginpagecustomer.xml
+++ b/app/src/main/res/layout/activity_loginpagecustomer.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/cardview_light_background"
+    android:background="#ffeee7"
     android:layout_height="match_parent"
     tools:context=".loginpagecustomer">
 
@@ -12,47 +12,40 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="200dp">
+        <ImageView
+            android:scaleType="fitXY"
+            android:src="@drawable/choosepic"
+            android:layout_width="match_parent"
+            android:layout_height="200dp">
+        </ImageView>
+            <ImageView
+                android:src="@drawable/ic_baseline_arrow_back_24"
+                android:layout_width="wrap_content"
+                android:layout_margin="16dp"
+                android:layout_height="wrap_content">
+            </ImageView>
 
+        </RelativeLayout>
 
         <TextView
-            android:textSize="55dp"
-            android:textColor="@color/colorPrimary"
-            android:text="Hi"
-            android:layout_margin="16dp"
             android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-        </TextView>
-        <TextView
             android:textColor="#000000"
-            android:layout_gravity="center"
-            android:text="Welcome"
-            android:layout_marginTop="42dp"
-            android:textSize="30dp"
+            android:layout_gravity="start"
+            android:text="Login"
+            android:layout_margin="16dp"
+            android:textSize="42sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-        </TextView>
-        <TextView
-            android:textColor="#000000"
-            android:layout_gravity="center"
-            android:text="Login to continue!"
-            android:textSize="24dp"
-
-            android:layout_marginBottom="32dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
         </TextView>
         <com.google.android.material.textfield.TextInputLayout
-
             android:textColorHint="#9A9A9A"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:boxCornerRadiusTopStart="24dp"
-            app:boxCornerRadiusBottomEnd="24dp"
-            app:boxCornerRadiusBottomStart="24dp"
-            app:boxCornerRadiusTopEnd="24dp"
+            app:boxBackgroundColor="@color/cardview_light_background"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
@@ -70,12 +63,9 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            app:boxCornerRadiusTopStart="24dp"
-            app:boxCornerRadiusBottomEnd="24dp"
-            app:boxCornerRadiusBottomStart="24dp"
-            app:boxCornerRadiusTopEnd="24dp"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
+            app:boxBackgroundColor="@color/cardview_light_background"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             app:passwordToggleEnabled="true"
@@ -94,19 +84,20 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
+            android:textStyle="bold"
             android:layout_marginTop="60dp"
-            app:cornerRadius="20dp"
             android:layout_marginLeft="40dp"
             android:id="@+id/login"
             android:layout_marginRight="40dp"
-            android:textColor="@color/cardview_light_background"
+            android:textSize="18sp"
+            android:backgroundTint="#854a99"
             android:text="LOGIN"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         </Button>
         <TextView
             android:layout_margin="8dp"
-            android:textColor="@color/colorPrimary"
+            android:textColor="#854a99"
             android:layout_gravity="center"
             android:text="Reset password"
             android:layout_width="wrap_content"
@@ -130,7 +121,7 @@
                 android:textSize="14dp"
                 android:layout_margin="8dp"
                 android:id="@+id/signup"
-                android:textColor="@color/colorPrimary"
+                android:textColor="#854a99"
                 android:text="Sign up"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
