--- a/app/src/main/res/menu/dashboardmenu.xml
+++ b/app/src/main/res/menu/dashboardmenu.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="@string/app_name"></item>
+    <item
+        android:icon="@drawable/ic_baseline_check_circle_24"
+        android:title="Completed orders">
+
+    </item>
+    <item
+        android:icon="@drawable/ic_baseline_pending_24"
+        android:title="pending orders"></item>
+    <item
+        android:icon="@drawable/ic_baseline_terms_24"
+        android:title="Terms and conditions"></item>
+    <item
+        android:icon="@drawable/ic_baseline_policy_24"
+        android:title="Privacy policy"></item>
+    <item
+        android:icon="@drawable/ic_baseline_not_logout_24"
+        android:title="Logout"></item>
 
 </menu>
